# Restaurant-Management-System

./: .coverage  .cursorrules  .gitignore  README.md  pyproject.toml  pytest.ini  render.yaml  requirements.txt  setup.ps1  setup.py  validate.ps1  vercel.json
backend/: .gitignore  __init__.py  alembic.ini  drop_tables.py  pytest.ini  requirements.txt  run_test_migrations.py
backend/api/: __init__.py  app.py  dependencies.py  vercel_handler.py
backend/api/routes/: __init__.py  cart.py  menu.py  order.py  ratings.py  users.py
backend/app/: crud.py  database.py  models.py  schemas.py
backend/app/api/: deps.py
backend/app/core/: config.py  security.py
backend/app/models/: user.py
backend/app/routers/: menu.py
backend/migrations/: env.py
backend/models/: __init__.py
backend/scripts/: seed_allergens.py
backend/services/: cart.py  cart_service.py  menu.py  menu_service.py  order_service.py  rating_service.py  user.py  user_service.py
backend/tests/: conftest.py  test_menu_items.py  test_user_model.py
backend/utils/: auth.py  database.py  exceptions.py
frontend/: .env.production  jest.config.cjs  jest.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  env.test.ts  env.ts  index.css  main.tsx  setupTests.ts  test-utils.tsx
frontend/src/mocks/: env.ts  (+2 more)
old code/: UserDialog.tsx  app.py
prompts/: Personal Task Manager  Test_prompt.txt  application_build.txt  restaurant_app.txt
restaurant_app.egg-info/: PKG-INFO  SOURCES.txt
restaurant_management_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+135 files in other folders)
